objects/ProdCred__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DomainURL__c</fullName>
        <label>DomainURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>clientid__c</fullName>
        <label>clientid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientsecret__c</fullName>
        <label>clientsecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prod Credential for Sandbox Refresh</label>
</CustomObject>